# DecoPy

./: README.md  pyproject.toml  setup.py  test.py
DecoPy/: __init__.py  decorators.py
