[project]
name = "DecoPy"
version = "0.1.0"
description = "A collection of decorators to enhance Python code"
authors = [
  { name="Ravi Prakash Yadav", email="raviprakashyadav1998@gmail.com" },
]

readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/ravi-yadav-98/DecoPy"
